--- a/html/kms.html
+++ b/html/kms.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body>t 
     <h1>추가작업</h1>
+    <div><p>kms브랜치로 업로드</p></div>
 </body>
 </html>
